@@ -27,8 +27,9 @@ import org.wildfly.core.launcher.logger.LauncherMessages;
 class Jvm {
     private static final String JAVA_EXE;
     private static final Path JAVA_HOME;
-    private static final boolean MODULAR_JVM = true;
-    private static final boolean ENHANCED_SECURITY_MANAGER = Runtime.version().feature() >= 12;
+    private static final boolean SUPPORTS_SECURITY_MANGER = Runtime.version().feature() < 24;
+    private static final boolean ENHANCED_SECURITY_MANAGER = SUPPORTS_SECURITY_MANGER && Runtime.version()
+            .feature() >= 12;
 
     static {
         String exe = "java";
@@ -40,15 +41,15 @@ class Jvm {
         JAVA_HOME = Paths.get(javaHome);
     }
 
-    private static final Jvm DEFAULT = new Jvm(JAVA_HOME, MODULAR_JVM, ENHANCED_SECURITY_MANAGER);
+    private static final Jvm DEFAULT = new Jvm(JAVA_HOME, SUPPORTS_SECURITY_MANGER, ENHANCED_SECURITY_MANAGER);
 
     private final Path path;
-    private final boolean isModular;
+    private final boolean isSecurityManagerSupported;
     private final boolean enhancedSecurityManager;
 
-    private Jvm(final Path path, final boolean isModular, final boolean enhancedSecurityManager) {
+    private Jvm(final Path path, final boolean isSecurityManagerSupported, final boolean enhancedSecurityManager) {
         this.path = path;
-        this.isModular = isModular;
+        this.isSecurityManagerSupported = isSecurityManagerSupported;
         this.enhancedSecurityManager = enhancedSecurityManager;
     }
 
@@ -87,7 +88,7 @@ class Jvm {
             return DEFAULT;
         }
         final Path path = validateJavaHome(javaHome);
-        return new Jvm(path, isModularJavaHome(path), hasEnhancedSecurityManager(javaHome));
+        return new Jvm(path, isSecurityManagerSupported(javaHome), hasEnhancedSecurityManager(javaHome));
     }
 
     /**
@@ -113,8 +114,18 @@ class Jvm {
      *
      * @return {@code true} if this is a modular JVM, otherwise {@code false}
      */
+    @Deprecated(forRemoval = true, since = "1.0")
     public boolean isModular() {
-        return isModular;
+        return true;
+    }
+
+    /**
+     * Indicates if the security manager is supported for this JVM.
+     *
+     * @return {@code true} if this is a security manager is supported in this JVM, otherwise {@code false}
+     */
+    public boolean isSecurityManagerSupported() {
+        return isSecurityManagerSupported;
     }
 
     /**
@@ -126,13 +137,7 @@ class Jvm {
         return enhancedSecurityManager;
     }
 
-    private static boolean isModularJavaHome(final Path javaHome) {
-        final Path jmodsDir = javaHome.resolve("jmods");
-        // If the jmods directory exists we can safely assume this is a modular JDK, note even in a modular JDK this
-        // may not exist.
-        if (Files.isDirectory(jmodsDir)) {
-            return true;
-        }
+    private static boolean isSecurityManagerSupported(final Path javaHome) {
         // Next check for a $JAVA_HOME/release file, for a JRE this will not exist
         final Path releaseFile = javaHome.resolve("release");
         if (Files.isReadable(releaseFile) && Files.isRegularFile(releaseFile)) {
@@ -143,28 +148,22 @@ class Jvm {
                     if (line.startsWith("JAVA_VERSION=")) {
                         // Get the version value
                         final int index = line.indexOf('=');
-                        return isModularJavaVersion(line.substring(index + 1).replace("\"", ""));
+                        return isSecurityManagerSupported(line.substring(index + 1).replace("\"", ""));
                     }
                 }
             } catch (IOException ignore) {
             }
         }
         // Final check is to launch a new process with some modular JVM arguments and check the exit code
-        return isModular(javaHome);
+        return isSecurityManagerSupportedInJvm(javaHome);
     }
 
-    private static boolean isModularJavaVersion(final String version) {
+    private static boolean isSecurityManagerSupported(final String version) {
         if (version != null) {
             try {
                 final String[] versionParts = version.split("\\.");
-                if (versionParts.length == 1) {
-                    return Integer.parseInt(versionParts[0]) >= 9;
-                } else if (versionParts.length > 1) {
-                    // Check the first part and if one, use the second part
-                    if ("1".equals(versionParts[0])) {
-                        return Integer.parseInt(versionParts[2]) >= 9;
-                    }
-                    return Integer.parseInt(versionParts[0]) >= 9;
+                if (versionParts.length >= 1) {
+                    return Integer.parseInt(versionParts[0]) < 24;
                 }
             } catch (Exception ignore) {
             }
@@ -196,19 +195,20 @@ class Jvm {
     }
 
     /**
-     * Checks to see if the {@code javaHome} is a modular JVM.
+     * Checks to see if the {@code javaHome} supports the security manager.
      *
-     * @param javaHome the Java Home if {@code null} an attempt to discover the Java Home will be done
+     * @param javaHome the Java Home
      *
-     * @return {@code true} if this is a modular environment
+     * @return {@code true} if this JVM supports the security manager
      */
-    private static boolean isModular(final Path javaHome) {
+    private static boolean isSecurityManagerSupportedInJvm(final Path javaHome) {
         final List<String> cmd = new ArrayList<>();
         cmd.add(resolveJavaCommand(javaHome));
-        cmd.add("--add-modules=java.se");
+        cmd.add("-Djava.security.manager");
         cmd.add("-version");
         return checkProcessStatus(cmd);
     }
+
     /**
      * Checks the process status.
      *
@@ -251,7 +251,7 @@ class Jvm {
         return result;
     }
 
-    private static boolean containsWarning(final Path logFile)  throws IOException {
+    private static boolean containsWarning(final Path logFile) throws IOException {
         String line;
         try (BufferedReader br = new BufferedReader(new InputStreamReader(new FileInputStream(logFile.toFile())))) {
             while ((line = br.readLine()) != null) {
